# Unstructured-Data-Processing

./: README.md  Taskfile.yml  data-extraction.ipynb  main.py  pyproject.toml
subproject/: pyproject.toml
utils/: sitemap.py
