[project]
name = "data-extraction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "docling>=2.28.2",
    "pandas>=2.2.3",
    "pydantic>=2.11.0",
]

[tool.uv.workspace]
members = ["subproject"]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
